<resources>
    <string name="_xpopup_ext_day" />
    <string name="_xpopup_ext_hours" />
    <string name="_xpopup_ext_minutes" />
    <string name="_xpopup_ext_month" />
    <string name="_xpopup_ext_seconds" />
    <string name="_xpopup_ext_year" />
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abnormal_recording">The recording is abnormal</string>
    <string name="aboutus_offical_net">Official website</string>
    <string name="access_code">Password:</string>
    <string name="account_code_set_hint">●●●●●●</string>
    <string name="account_code_set_msg">Verification code has been sent to:</string>
    <string name="account_code_set_notice">The code you entered is incorrect.</string>
    <string name="account_code_set_unable">Account was cancelled within 30 days</string>
    <string name="account_continue">Continue</string>
    <string name="account_email_private_notice">Please use a non-private email address for contact</string>
    <string name="account_email_reset_hint">Enter your new email address</string>
    <string name="account_email_set_msg">A verification code will be sent to the provided email address.</string>
    <string name="account_email_set_notice">Valid email required</string>
    <string name="account_invisible_holder">000000</string>
    <string name="account_name_set_empty">Please provide your preferred name or title.</string>
    <string name="account_name_set_msg">Hello! What should we call you?</string>
    <string name="account_nickname_set_correct">You can always change it later.</string>
    <string name="account_nickname_set_notice">0/12 charecters.</string>
    <string name="account_privacy_policy">Agree to the</string>
    <string name="account_pwd_forget">Forgot password?</string>
    <string name="account_pwd_forget_title">Forgot Password</string>
    <string name="account_pwd_reset_msg">Reset Password</string>
    <string name="account_pwd_reset_success">Password change complete!\nThis will be your new password.</string>
    <string name="account_pwd_set_confirm_correct">The two passwords do not match.</string>
    <string name="account_pwd_set_confirm_hint">Confirm password</string>
    <string name="account_pwd_set_create">Create Password</string>
    <string name="account_pwd_set_hint">Your password</string>
    <string name="account_pwd_set_match">The two passwords match.</string>
    <string name="account_pwd_set_notice">Use 8–18 characters, including a letter and a number</string>
    <string name="account_pwd_wrong">This email and password combination is incorrect.</string>
    <string name="account_resend">Resend code</string>
    <string name="account_resend_countdown">Resending in %ds</string>
    <string name="account_send_code_holder">We will send a password reset verification code to %s.</string>
    <string name="account_submit">Submit</string>
    <string name="account_try_another">Try Another Password</string>
    <string name="action_regenerate">Regenerate</string>
    <string name="action_select_all">Select All</string>
    <string name="agree_purchase">Agree purchase</string>
    <string name="ai_chat_ask_anything">Ask any questions</string>
    <string name="ai_chat_base">Generate an AI summary based on the following files:</string>
    <string name="ai_chat_empty_holder">I\'m everyLink AI, your personal AI assistant.</string>
    <string name="ai_chat_hint">You can ask me anything</string>
    <string name="ai_chat_history">AI</string>
    <string name="ai_chat_in_progress">AI summary in progress. Please wait.</string>
    <string name="ai_chat_limit_reached">The limit has been reached.</string>
    <string name="ai_chat_stop_respond">Stop responding</string>
    <string name="ai_easy_namer">AI easy namer in progress.</string>
    <string name="ai_generation_error">AI generation error</string>
    <string name="ai_select_files">Select Files</string>
    <string name="ai_select_info">Select up to 5 files for AI analysis and summary. Click ‘Continue’ to begin.</string>
    <string name="ai_select_limit">Select up to</string>
    <string name="ai_summary">AI Assistant</string>
    <string name="ai_summary_copy_notice">The result cannot be saved. \nAre you sure you want to go back to the previous page?</string>
    <string name="ai_summary_count_max">Abstract times exceed limit</string>
    <string name="ai_summary_in_progress">AI summarizing in progress. Please wait.</string>
    <string name="ai_summary_info">Generate an AI summary based on the following files:</string>
    <string name="ai_summary_mode">Available modes:</string>
    <string name="ai_summary_mode_all">Extensive Summarization</string>
    <string name="ai_summary_mode_point">Bullet-point Summarization</string>
    <string name="ai_summary_notice">For reference only.</string>
    <string name="ai_summary_regenerate">Summarizing Again</string>
    <string name="ai_summary_scenes_default">Default</string>
    <string name="ai_summary_scenes_mind">Mind-map</string>
    <string name="ai_summary_scenes_overview">Overview</string>
    <string name="ai_summary_scenes_summary">Summarize</string>
    <string name="ai_summary_text_max">The text length is too long. \nPlease consider summarizing it manually first.</string>
    <string name="ai_summary_text_min">Unable to use this feature due to insufficient text length.</string>
    <string name="ai_summary_vip_msg">By becoming a member, you gain access to an AI Summary service. \nAre you sure you want to upgrade?</string>
    <string name="aivox_is_running_in_the_background">everyLink is running in the background…</string>
    <string name="all">All</string>
    <string name="all_edit">Edit</string>
    <string name="and">and</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="another_trans_on_progressing">There are other transcription tasks being processed</string>
    <string name="another_upload_on_progressing">There are other upload tasks being processed</string>
    <string name="anti_shake_settings">Anti-shake settings</string>
    <string name="app_name">everyLink</string>
    <string name="app_slogan">everyLink to AI</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply_time">Apply time</string>
    <string name="assist_dialog_title">Contact Us</string>
    <string name="audio_delete">Delete this recording?</string>
    <string name="audio_delete_cloud_remind">Once files are deleted, they can’t be recovered.\nHowever, members can restore them within 15 days.</string>
    <string name="audio_delete_fail">Delete failed</string>
    <string name="audio_delete_ing">Deleting~</string>
    <string name="audio_text_popup_copy">Copy</string>
    <string name="audio_text_popup_delete">Delete</string>
    <string name="audio_text_popup_edit">Edit</string>
    <string name="audio_text_popup_mark">Insert Notes</string>
    <string name="audio_text_popup_photo">Photos</string>
    <string name="audio_text_popup_share">Share</string>
    <string name="audio_text_popup_speaker">Participants</string>
    <string name="audio_text_popup_trans">Trans</string>
    <string name="brand_compatible">everyLink-compatible</string>
    <string name="cancel_a_subscription">How to Cancel subscription?</string>
    <string name="cancel_not_finish">* You have not finished yet. You still need to follow the unsubscribe process based on your mobile system.</string>
    <string name="cancel_on_apple">Cancel Subscription on Apple</string>
    <string name="cancel_on_apple_guide">1. Tap Settings.\n 2. Tap your name.\n 3. Tap Subscriptions.\n 4. Tap the subscription.\n 5. Tap Cancel Subscription.(you might need to scroll down)\n * If there is no Cancel button or you see an expiration message, the subscription is already canceled.</string>
    <string name="cancel_on_google">Cancel Subscription on Android</string>
    <string name="cancel_on_google_guide">1. Tap the Google Play app.\n 2. Tap the profile icon.\n 3. Tap Payments &amp; subscriptions.\n 4. Tap subscriptions.\n 5. Check the list of subscriptions for expired or declined payment methods.</string>
    <string name="device_how_to_pair">How to pair</string>
    <string name="device_information">Information</string>
    <string name="device_instruction">Instruction</string>
    <string name="device_manager">Devices</string>
    <string name="double_click_left_button">Double press left button</string>
    <string name="first_long_press_right_button_3s">First, long press right button for 3s</string>
    <string name="go_home">Home</string>
    <string name="long_press_left_button_2s">Long press left button for 2s</string>
    <string name="next_song">Next song</string>
    <string name="operation_guide">Guide</string>
    <string name="play_pause_music">Play/Pause Music</string>
    <string name="previous_song">Previous song</string>
    <string name="product_user_manual">User Manual</string>
    <string name="record_video">Record video</string>
    <string name="single_click_left_button">Single press left button</string>
    <string name="single_click_right_button">Single press right button</string>
    <string name="stop_video_recording">Stop video recording</string>
    <string name="take_photo">Take photo</string>
    <string name="then_single_click_right_button">Then, click the right button</string>
    <string name="triple_click_left_button">Triple press left button</string>
    <string name="vip_feature_ai">&lt;b&gt;Unlimited&lt;/b&gt; AI summary tools</string>
    <string name="vip_feature_cloud">&lt;b&gt;10GB&lt;/b&gt; cloud storage space</string>
    <string name="vip_feature_folder">Create &lt;b&gt;10 folders&lt;/b&gt;</string>
    <string name="vip_feature_img">Each audio file can include up to &lt;b&gt;10 images&lt;/b&gt;</string>
    <string name="vip_feature_import">&lt;b&gt;Unlimited&lt;/b&gt; imports</string>
    <string name="vip_feature_time">&lt;b&gt;1,800 minutes&lt;/b&gt; monthly</string>
    <string name="wake_up_ai_assistant">Wake up AI assistant</string>
    <string name="wake_up_command">Wake-up Command</string>
</resources>