<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_color_popup_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="12dp">
    <HorizontalScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/item_edit_speaker"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:text="@string/audio_text_popup_speaker"
                app:drawableTopCompat="@drawable/ic_edit_speaker"
                style="@style/TextViewAudioPopupMenuScroll"/>
            <TextView
                android:id="@+id/item_pic"
                android:visibility="gone"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:text="@string/audio_text_popup_photo"
                app:drawableTopCompat="@drawable/ic_edit_pic"
                style="@style/TextViewAudioPopupMenuScroll"/>
            <TextView
                android:id="@+id/item_share"
                android:visibility="gone"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:text="@string/audio_text_popup_share"
                app:drawableTopCompat="@drawable/ic_edit_share"
                style="@style/TextViewAudioPopupMenuScroll"/>
            <TextView
                android:id="@+id/item_edit"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:text="@string/audio_text_popup_edit"
                app:drawableTopCompat="@drawable/ic_edit_text"
                style="@style/TextViewAudioPopupMenuScroll"/>
            <TextView
                android:id="@+id/item_mark"
                android:visibility="gone"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:text="@string/audio_text_popup_mark"
                app:drawableTopCompat="@drawable/ic_edit_notes"
                style="@style/TextViewAudioPopupMenuScroll"/>
            <TextView
                android:id="@+id/item_trans_single"
                android:visibility="gone"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:text="@string/audio_text_popup_trans"
                app:drawableTopCompat="@drawable/ic_edit_summary"
                style="@style/TextViewAudioPopupMenuScroll"/>
            <TextView
                android:id="@+id/item_copy"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:text="@string/audio_text_popup_copy"
                app:drawableTopCompat="@drawable/ic_edit_copy"
                style="@style/TextViewAudioPopupMenuScroll"/>
            <TextView
                android:id="@+id/item_delete"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:text="@string/audio_text_popup_delete"
                app:drawableTopCompat="@drawable/ic_edit_delete"
                style="@style/TextViewAudioPopupMenuScroll"/>
        </LinearLayout>
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
