<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:tag="layout/activity_device_info_0"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.aivox.common_ui.HeadTitleLinearView
        android:id="@+id/title_view"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:common_title_txt="@string/device_manager"/>
    <ImageView
        android:id="@+id/iv_device_icon"
        android:layout_width="220dp"
        android:layout_height="220dp"/>
    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/bg_setting_tile"
        android:paddingBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="20dp">
        <com.aivox.common_ui.SettingTileGroupView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            app:tile_group_title="@string/device_information"/>
        <com.aivox.common_ui.SettingTileView
            android:id="@+id/stv_how_to_pair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tile_title="@string/device_how_to_pair"/>
        <com.aivox.common_ui.SettingTileView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tile_show_divider="false"
            app:tile_title="@string/device_instruction"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:textSize="13sp"
        android:textColor="@color/txt_color_primary"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brand_compatible"
        android:drawablePadding="8dp"
        app:drawableStartCompat="@drawable/ic_cooperate"/>
</LinearLayout>
