<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="layout/activity_glass_manual_0"
    android:background="@drawable/bg_glass_manual"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.aivox.common_ui.HeadTitleLinearView
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        app:common_back_visible="true"
        app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_tab"
        android:background="@drawable/bg_gray_c12"
        android:padding="2dp"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        app:layout_constraintBottom_toBottomOf="@+id/title_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title_view">
        <TextView
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="@color/black_text"
            android:gravity="center"
            android:id="@+id/tv_guide"
            android:tag="binding_1"
            android:background="@drawable/bg_white_c10"
            android:layout_width="84dp"
            android:layout_height="32dp"
            android:text="@string/operation_guide"/>
        <TextView
            android:textSize="13sp"
            android:textColor="@color/black_text"
            android:gravity="center"
            android:id="@+id/tv_wakeup"
            android:tag="binding_2"
            android:layout_width="84dp"
            android:layout_height="32dp"
            android:text="@string/wake_up_command"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_view">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_guide"
                android:background="@drawable/bg_white_c20"
                android:paddingBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp">
                <ImageView
                    android:id="@+id/iv_full"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:src="@drawable/glass_manual_full"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"
                    app:layout_constraintTop_toTopOf="parent"/>
                <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/ll_left"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingEnd="10dp"
                    android:layout_marginStart="20dp"
                    app:layout_constraintEnd_toStartOf="@+id/ll_right"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_full">
                    <TextView
                        android:textSize="16sp"
                        android:textColor="@color/black_20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/single_click_left_button"/>
                    <TextView
                        android:textSize="14sp"
                        android:textColor="@color/gray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/play_pause_music"/>
                    <TextView
                        android:textSize="16sp"
                        android:textColor="@color/black_20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/double_click_left_button"/>
                    <TextView
                        android:textSize="14sp"
                        android:textColor="@color/gray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/next_song"/>
                    <TextView
                        android:textSize="16sp"
                        android:textColor="@color/black_20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/triple_click_left_button"/>
                    <TextView
                        android:textSize="14sp"
                        android:textColor="@color/gray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/previous_song"/>
                    <TextView
                        android:textSize="16sp"
                        android:textColor="@color/black_20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/long_press_left_button_2s"/>
                    <TextView
                        android:textSize="14sp"
                        android:textColor="@color/gray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/wake_up_ai_assistant"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/ll_right"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ll_left"
                    app:layout_constraintTop_toBottomOf="@+id/iv_full">
                    <TextView
                        android:textSize="16sp"
                        android:textColor="@color/black_20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/single_click_right_button"/>
                    <TextView
                        android:textSize="14sp"
                        android:textColor="@color/gray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/take_photo"/>
                    <TextView
                        android:textSize="16sp"
                        android:textColor="@color/black_20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/first_long_press_right_button_3s"/>
                    <TextView
                        android:textSize="14sp"
                        android:textColor="@color/gray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/record_video"/>
                    <TextView
                        android:textSize="16sp"
                        android:textColor="@color/black_20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/then_single_click_right_button"/>
                    <TextView
                        android:textSize="14sp"
                        android:textColor="@color/gray"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/stop_video_recording"/>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:textSize="16sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:id="@+id/tv_manual"
                android:tag="binding_3"
                android:background="@drawable/bg_gradient_purple_c28"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="24dp"
                android:text="@string/product_user_manual"
                android:layout_below="@+id/cl_guide"
                android:layout_marginHorizontal="16dp"/>
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/ll_wakeup"
                android:background="@drawable/bg_white_c20"
                android:padding="10dp"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"/>
        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
