<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="layout/fragment_cancel_sub_notice_0"
    android:background="@color/bg_color_secondary"
    android:paddingTop="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp">
    <TextView
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/txt_color_primary"
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_a_subscription"
        app:layout_constraintBottom_toBottomOf="@+id/iv_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_close"/>
    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_close_x"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:textSize="17sp"
        android:textColor="@color/txt_color_warning"
        android:id="@+id/tv_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/cancel_not_finish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"/>
    <TextView
        android:textSize="15sp"
        android:textColor="@color/txt_color_primary"
        android:id="@+id/tv_cancel_on_apple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_on_apple"
        android:paddingVertical="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_msg"/>
    <TextView
        android:textSize="15sp"
        android:textColor="@color/txt_color_primary"
        android:id="@+id/tv_cancel_apple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_on_apple_guide"
        android:layout_marginStart="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cancel_on_apple"/>
    <TextView
        android:textSize="15sp"
        android:textColor="@color/txt_color_primary"
        android:id="@+id/tv_cancel_on_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_on_google"
        android:paddingVertical="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cancel_apple"/>
    <TextView
        android:textSize="15sp"
        android:textColor="@color/txt_color_primary"
        android:id="@+id/tv_cancel_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_on_google_guide"
        android:layout_marginStart="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cancel_on_google"/>
    <com.aivox.common_ui.LoadingButton
        android:id="@+id/btn_go_home"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:lb_text="@string/go_home"/>
</androidx.constraintlayout.widget.ConstraintLayout>
